encoding/jsonschema/testdata/txtar/schema_not_at_root.txtar
-- schema.json --
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "$id": "https://test.example/foo",
  "oneOf": [
      {
          "$schema": "http://json-schema.org/draft-07/schema#",
          "type": "string"
      }
  ]
}

-- out/decode/extract --
ERROR:
$schema can only appear at the root in JSON Schema version http://json-schema.org/draft-07/schema#:
    schema.json:6:11
-- out/decode-v3/extract --
ERROR:
$schema can only appear at the root in JSON Schema version http://json-schema.org/draft-07/schema#:
    schema.json:6:11
